<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VBlog</string>
    
    <!-- drawer -->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="drawer_item_login">用户登录</string>
    <string name="drawer_item_list">博客列表</string>
    <string name="drawer_item_category">博客分类</string>
    <string name="drawer_item_add">发表博客</string>
    <string name="drawer_item_settings">设置</string>
    <string name="drawer_item_about">关于</string>

    <!-- action bar -->
    <string name="action_detail_remove_blog">删除博客</string>
    <string name="action_detail_edit_blog">编辑博客</string>
    <string name="action_detail_info_blog">博客详情</string>
    <string name="action_main_about">关于</string>
    <string name="action_search">Search</string>
    <string name="action_add">Add</string>

    <!-- progress -->
    <string name="progress_logining">正在登陆&#8230;&#8230;&#8230;</string>
    <string name="progress_deleting">正在删除&#8230;&#8230;&#8230;</string>
    <string name="progress_logouting">正在注销&#8230;&#8230;&#8230;</string>
    <string name="progress_sending_date">正在发送数据&#8230;&#8230;&#8230;</string>

    <!-- dialog -->
    <string name="dialog_login_hint_username">用户名</string>
    <string name="dialog_login_hint_password">密码</string>
    <string name="dialog_login_button_positive">登录</string>
    <string name="dialog_login_button_negative">取消</string>
    <string name="dialog_login_title">登录</string>
    <string name="dialog_info_title">博客标题：%1$s</string>
    <string name="dialog_info_username">博客作者：%1$s</string>
    <string name="dialog_info_category">博客分类：%1$s</string>
    <string name="dialog_info_create_time">创建时间：%1$s</string>
    <string name="dialog_info_update_time">更新时间：%1$s</string>
    <string name="dialog_about_author">wangwei</string>
    <string name="dialog_about_author_email">nmtlsww@gmail.com</string>
    <string name="dialog_about_github">https://github.com/nmtlsww/VBlog</string>
    <string name="dialog_logout_message">是否确认注销当前用户吗？</string>
    <string name="dialog_delete_blog_message">是否确认删除此条博客？</string>
    <string name="dialog_delete_comment_message">是否确认删除此条评论吗？</string>
    <string name="dialog_quit_edit_message">是否放弃编辑？</string>
    <string name="dialog_ok">确定</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_title">提示</string>

    <!-- toast -->
    <string name="toast_delete_success">删除成功</string>
    <string name="toast_delete_fail">删除失败</string>
    <string name="toast_add_comment_success">添加评论成功</string>
    <string name="toast_all_load_finish">全部加载完成</string>
    <string name="toast_add_comment_error_incomplete">信息填写不完整</string>
    <string name="toast_add_comment_error_email">email格式不正确</string>
    <string name="toast_blog_detail_getting_data">正在获取数据，请稍候再试</string>
    <string name="toast_login_success">登陆成功</string>
    <string name="toast_logout_success">注销成功</string>
    <string name="toast_login_fail">登录失败,账号或密码错误</string>
    <string name="toast_logout_fail">注销失败</string>
    <string name="toast_add_blog_success">添加博客成功</string>
    <string name="toast_add_blog_new_category">新的分类</string>
    <string name="toast_activity_main_exit">再按一次退出</string>

    <!-- fragment -->
    <string name="fragment_title_add_blog">添加博客</string>
    <string name="fragment_title_edit_blog">编辑博客</string>
    <string name="fragment_title_add_comment">添加评论</string>
    <string name="fragment_title_blog_detail">博客详情</string>
    <string name="fragment_blog_detail_subtitle_detail">正文</string>
    <string name="fragment_blog_detail_subtitle_comment">评论</string>
    <string name="fragment_comment_list_hint_reply">请输入评论</string>
    <string name="fragment_category_list_all_category">全部分类</string>
	
    <!-- view -->
    <string name="view_error_text">加载失败，请点击重试</string>
    <string name="view_empty_text">暂无数据</string>
    
    <!-- http -->
    <string name="http_error_no_login">尚未登录，请登录后重试</string>
    <string name="http_error_network">网络异常，请稍候再试</string>
    <string name="http_fail_comment_list">获取评论列表失败</string>
    <string name="http_fail_blog_list">获取博客列表失败</string>
    <string name="http_fail_category_list">获取分类列表失败</string>
    <string name="http_fail_blog_detail">获取博客详情失败</string>
    <string name="http_fail_add_blog">添加博客失败</string>
    <string name="http_fail_add_comment">添加评论失败</string>
    <string name="http_error_server_data">服务器数据异常</string>

</resources>