<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
	>
    
    <TextView 
        android:id="@+id/dialog_info_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_info_title"
        android:layout_marginTop="5dp"
        android:textSize="16sp"
        />
    
    <TextView 
        android:id="@+id/dialog_info_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_info_username"
        android:layout_marginTop="5dp"
        android:textSize="16sp"
        />
    
    <TextView 
        android:id="@+id/dialog_info_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_info_category"
        android:layout_marginTop="5dp"
        android:textSize="16sp"
        />
    
    <TextView 
        android:id="@+id/dialog_info_create_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_info_create_time"
        android:layout_marginTop="5dp"
        android:textSize="16sp"
        />
    
    <TextView 
        android:id="@+id/dialog_info_update_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_info_update_time"
        android:layout_marginTop="5dp"
        android:textSize="16sp"
        />

</LinearLayout>
