<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
	>
	
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher"
        android:layout_gravity="center_horizontal"
        />
    
     <TextView 
        android:id="@+id/dialog_about_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:layout_gravity="center_horizontal"
        />
    
    <TextView 
        android:id="@+id/dialog_about_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_about_author"
        android:layout_marginTop="5dp"
        android:textSize="16sp"
        android:layout_gravity="center_horizontal"
        />
    
    <TextView 
        android:id="@+id/dialog_about_author_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_about_author_email"
        android:layout_marginTop="5dp"
        android:textSize="16sp"
        android:layout_gravity="center_horizontal"
        />
    
    <TextView 
        android:id="@+id/dialog_about_github"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_about_github"
        android:layout_marginTop="5dp"
        android:textSize="16sp"
        android:layout_gravity="center_horizontal"
        />

</LinearLayout>
